# paperkernelcxx

./: .gitignore  README.md  build_standalone.sh  common.cpp.STANDALONE  tokenizer.cpp.STANDALONE  tree_maker.cpp.STANDALONE
.github/workflows/: Linux_arm64_Release.yml  Linux_x86_64_Debug.yml  Linux_x86_64_Release.yml  MSWindows_x86_32.yml  MSWindows_x86_64.yml  MSWindows_x86_64_WxNew.yml  MSWindows_x86_64_WxOld.yml  cppcheck.yml  macOS_arm64.yml  macOS_x86_64.yml  wxGTK_x86_64.yml  wxMSW_x86_32_MSBuild.yml  wxMSW_x86_32_MSBuild.yml.RENAMED  wxMSW_x86_64_MSBuild.yml  wxMSW_x86_64_MSBuild.yml.RENAMED  wxOSX_arm64.yml
Plugin_Browse/: CMakeLists.txt  Plugin_Browse.cpp  Plugin_Browse.def  Plugin_Browse.h  Plugin_BrowseExports.cpp  Plugin_BrowseWindow.cpp  Plugin_BrowseWindow.h
Plugin_Search/: CMakeLists.txt  Plugin_Search.cpp  Plugin_Search.def  Plugin_Search.h  Plugin_SearchExports.cpp  Plugin_SearchWindow.cpp  Plugin_SearchWindow.h
helper_tools/: NameManager.hpp  build.sh  build_and_run_helpers.sh  build_paper_downloader.sh  clean.sh  common.cpp  common.hpp  complete_paper_list.txt  crawl.cpp  enumerate_authors.cpp  equivalent_names.cpp  escape_hex.hpp  hasher.hpp  header.cpp  header.hpp  index_for_xapian.cpp  names.txt  names_papers.txt  paper_downloader.cpp  run.sh  summarise.cpp  test_load_xapian_database.cpp  tokenizer.cpp  tree_maker.cpp  upload_to_virjacode_server.sh
helper_tools/downloaded/: 1989.html  1990.html  1991.html  1992.html  1993.html  1994.html  1995.html  1996.html  1997.html  1998.html  1999.html  2000.html  2001.html  2023.html  2024.html  2025.html  index.html
licenses/: license_bsd2.txt  license_bsd3.txt  license_zlib.txt
main_program/: AUTO_GENERATED_names.hpp  AUTO_GENERATED_tree_contents_author.hpp  AUTO_GENERATED_tree_contents_author_char.hpp  AUTO_GENERATED_tree_contents_author_wchar_t.hpp  AUTO_GENERATED_tree_contents_paper.hpp  AUTO_GENERATED_tree_contents_paper_char.hpp  AUTO_GENERATED_tree_contents_paper_wchar_t.hpp  AUTO_GENERATED_wxformbuilder.cpp  AUTO_GENERATED_wxformbuilder.h  Auto.h  CMakeLists.txt  GUI_Dialog_About.hpp  GUI_Dialog_Main.cpp  GUI_Dialog_Main.hpp  GUI_Dialog_Main_Debug_Tab.cpp  GUI_Dialog_Waiting.hpp  MySortableListCtrl.cpp  MySortableListCtrl.hpp  _Max.hpp  ai.cpp  ai.hpp  authortree.cpp  authortree.hpp  cctype_constexpr.hpp  common.hpp  debug.cpp  debug.hpp  embedded_archive.cpp  embedded_archive.hpp  hash.hpp  html_pages_hardcoded.hpp  local_http_server.cpp  local_http_server.hpp  main_program.rc  names.hpp  paper.cpp  paper.hpp  paper_tree_contents.hpp  paperman.cpp  paperman.hpp  (+16 more)
pictures/: download.ico.h  left_pane.ico.h  mugshot.jpg.h  right_pane.ico.h
